test/libsolidity/syntaxTests/constants/file_level_memory_inverted.sol
uint[] constant memory x = 2;
// ----
// ParserError 2314: (16-22): Expected identifier but got 'memory'
